# pixel-model2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MINIZ_README.md  README.md  pixel-model2.code-workspace
.github/: copilot-tasks.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ELSEMI.md  QUICKSTART.md
include/: i960.h  memory.h  miniz.h  miniz_common.h  miniz_export.h  miniz_tdef.h  miniz_tinfl.h  miniz_zip.h  tgp.h
src/: i960.cpp  main.cpp  main_test_interrupt.cpp  main_test_logical.cpp  main_test_tgp.cpp  main_test_tgp_3d.cpp  memory.cpp  test.cpp  test_init_3.cpp  test_load_memory.cpp  test_zip_extract.cpp  tgp.cpp  tgp_stub.cpp
src/core/: i960.cpp
src/main/: main_minimal.cpp
tests/: main_test.cpp  main_test_tgp_3d.cpp  test_init_0.cpp  test_init_1.cpp  test_init_2.cpp  test_load_memory.cpp  test_memory.cpp  test_minimal.cpp  test_tgp_allocation.cpp  test_zip_extract.cpp
vcop2/: epr-18022.ic2  epr-18518.14  epr-18519.15  epr-18520.4  epr-18521.5  epr-18524.12  epr-18525.13  epr-18530.30  mpr-16310.15  mpr-16311.16  mpr-16312.14  mpr-18510.20  mpr-18511.24  mpr-18512.25  mpr-18513.16  mpr-18514.8  mpr-18515.9  mpr-18516.10  mpr-18517.11  mpr-18522.6  mpr-18523.7  mpr-18526.37  mpr-18527.36  mpr-18528.32  mpr-18529.31  opr-14742a.45  opr-14743a.46  opr-14744.58  opr-14745.59  opr-14746.62  opr-14747.63
